fixed spacing on barchart div

--- a/src/css/bars.less
+++ b/src/css/bars.less
@@ -34,7 +34,9 @@
   white-space: nowrap;
   pointer-events: none;
   width: auto;
-  transition: opacity ease 0.2s, transform ease 0.2s; }
+  transition: opacity ease 0.2s, transform ease 0.2s; 
+  word-wrap: break-word;
+  width: 50px;
   #tooltip.visible {
     opacity: 1;
     transform: translateY(-10px); }
@@ -48,3 +50,4 @@
     border-style: solid;
     border-width: 8px 8px 0 8px;
     border-color: rgba(255, 255, 255, 0.9) transparent transparent transparent; }
+}  
